--- a/src/main/resources/templates/user/my-realEstates.html
+++ b/src/main/resources/templates/user/my-realEstates.html
@@ -23,7 +23,7 @@
                     <div class="bg-white tm-block h-100">
                         <div class="row">
                             <div class="col-8">
-                                <h2 class="tm-block-title d-inline-block">Моите обяви в работа</h2>
+                                <h2 class="tm-block-title d-inline-block">Моите обяви в недвижими имоти</h2>
                             </div>
                         </div>
                         <div class="table-responsive">
