--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <th:block th:include="~{/fragments/head}"></th:block>
@@ -15,7 +15,6 @@
                 </nav>
             </div>
         </div>
-
         <div class="container mt-lg-5 border-right border-bottom bg-transparent h-100">
             <h1 class="w-100 text-light text-center">Добре дошли</h1>
                <br>
