--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -46,9 +46,12 @@
         <ul class="navbar-nav">
 
             <li class="nav-item">
-                <a class="nav-link d-flex" href="/logout">
-                    <span>Излез</span>
-                </a>
+                <form class="nav-link d-flex" action="/logout" method="post">
+                    <input type="hidden"
+                           th:name="${_csrf.parameterName}"
+                           th:value="${_csrf.token}"/>
+                    <button class="bg-transparent border-0 text-danger">Изход</button>
+                </form>
             </li>
         </ul>
     </div>
